chore: fix card spacing

--- a/reporting/assets/local-style.css
+++ b/reporting/assets/local-style.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   width: 20rem;
   margin-right: 8px;
+  margin-bottom: 8px;
 }
 .card-text {
   color: #999999;
